finish education and experience sections

--- a/src/resume/education.tex
+++ b/src/resume/education.tex
@@ -11,15 +11,41 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Master (M.A.) in Mathematics} % Degree
+    {Miami University} % Institution
+    {Oxford, OH} % Location
+    {Sep. 2015 - May 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Master's topic: {\it The Container Method for Triangle-induced Hypergraphs}}
+        \item {2017 Journal award}
       \end{cvitems}
     }
 
+  \cventry
+    {B.A. in Mathematics} % Degree
+    {Miami University} % Institution
+    {Oxford, OH} % Location
+    {Sep. 2013 - May 2015} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+      \item {Presented {\it The (ab)surd Golden Ratio} at TEDX Miami
+          University on the false connections between art and the
+          fibonacci sequence: \url{https://youtu.be/0vVxL60YFJU} (over
+          325k views)}
+      \end{cvitems}
+    }
+
+  \cventry
+    {B.A. in Music} % Degree
+    {Miami University} % Institution
+    {Oxford, OH} % Location
+    {Sep. 2011 - May 2015} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {4-year music scholarship.}
+        \item {Focus in music technology, recording, and audio acoustic design.}
+      \end{cvitems}
+    }
 %---------------------------------------------------------
 \end{cventries}
