--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -17,8 +17,8 @@
     {Mar. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Led a company-wide transition to AWS SageMaker on over
-          more than a dozen client accounts, saving roughly \$40,000
+      \item {Led a company-wide transition to AWS SageMaker on more
+          than a dozen client accounts, saving roughly \$40,000
           annually in EC2 costs and reduced the onboarding time for
           new analysts from three days to 15 minutes. (Docker, Terraform, Jenkins)}
       \item {Principal developer of the internal python software
@@ -41,7 +41,7 @@
       \item {Wrote the ETL pipelines that translated client data into
           an analytics ready data warehouse that also fed back to a
           client-facing trade promotion optimization web
-          application. (Spark, Kubernetes, Argo) }
+          application. (Spark, Kubernetes, Argo, Azure) }
       \item {Derived the MY2021 MSRP recommendations for an
           international motorcycle company. (Databricks, hyperopt)}
       \item {Modeled contractor costs for a warehouse trust fund and
