--- a/src/resume.tex
+++ b/src/resume.tex
@@ -18,7 +18,7 @@
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
 % A4 paper size by default, use 'letterpaper' for US letter
-\documentclass[11pt, a4paper]{awesome-cv}
+\documentclass[20pt, a4paper]{awesome-cv}
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-nephritis}
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -55,13 +55,13 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Robert}{Enzmann}
-\position{Data Engineer{\enskip\cdotp\enskip}US Citizen}
+\position{Data Science/Engineering{\enskip\cdotp\enskip}US Citizen}
 \address{Boston, MA}
 
+\homepage{robbmann.io}
 \mobile{(+1) 978-201-5748}
 \email{robbenzmann@gmail.com}
 %\dateofbirth{January 1st, 1970}
-\homepage{robbmann.io}
 \github{renzmann}
 \linkedin{renzmann}
 % \gitlab{gitlab-id}
@@ -76,7 +76,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Building better python for Data Science."}
+\quote{``Building better tools for Data Science."}
 
 
 %-------------------------------------------------------------------------------
