--- a/src/resume.tex
+++ b/src/resume.tex
@@ -100,12 +100,8 @@
 %-------------------------------------------------------------------------------
 \input{src/resume/summary.tex}
 \input{src/resume/experience.tex}
-% \input{src/resume/honors.tex}
-% \input{src/resume/presentation.tex}
-% \input{src/resume/writing.tex}
-% \input{src/resume/committees.tex}
+\input{src/resume/skills.tex}
 \input{src/resume/education.tex}
-% \input{src/resume/extracurricular.tex}
 
 %-------------------------------------------------------------------------------
 \end{document}
