bulk updates to experience/skills

--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -42,13 +42,13 @@
           an analytics ready data warehouse that also fed back to a
           client-facing trade promotion optimization web
           application. (Spark, Kubernetes, Argo, Azure) }
-      \item {Derived the MY2021 MSRP recommendations for an
+      \item {Derived MY2021 MSRP recommendations for an
           international motorcycle company. (Databricks, hyperopt)}
       \item {Modeled contractor costs for a warehouse trust fund and
           deployed the model/report into our client's
           infrastructure. (Denodo, Excel, Python)}
-      \item {Built personalization, customer churn, and lifetime value
-          (CLTV) models for a medical cosmetics manufacturer. (R)}
+      \item {Modeled personalization, customer churn, and lifetime value
+          (CLTV) for a membership program with over 1MM members. (R)}
       \end{cvitems}
     }
 
