--- a/src/resume/skills.tex
+++ b/src/resume/skills.tex
@@ -9,15 +9,14 @@
 \begin{cventries}
   \cventry
     {I dabble in many others - but these are my bread \& butter}
-    {Languages}
+    {Tools \& Languages}
     {}
     {}
     {
       \begin{cvitems}
-        \item {Python - 5 yoe}
-        \item {Git - 5 yoe}
-        \item {Spark/SQL - 3 yoe}
-        \item {GNU/Unix, Bash, Make - 3 yoe}
+        \item {Python, SSH, Git - 5 yoe; specializing in DS with pandas, numpy, matplotlib, plotly; modeling experience with xgboost, scikit-learn, and hyperopt}
+        \item {GNU/Unix, Bash, Make, SQL, Dask, Spark - 3 yoe}
+        \item {Every editor under the sun, especially: Vim, Neovim, Emacs, VSCode, JetBrains PyCharm}
       \end{cvitems}
     }
 
@@ -28,9 +27,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Azure, AWS}
-        \item {Databricks, SageMaker}
-        \item {Terraform}
+        \item {Azure, AWS, Amazon Athena}
+        \item {Databricks, SageMaker, Docker, Terraform}
       \end{cvitems}
     }
 
