a few typo fixes and comment cleanup

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -76,7 +76,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Building better tools for Data Science."}
+% \quote{``Building better tools for Data Science."}
 
 
 %-------------------------------------------------------------------------------
