--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -12,14 +12,14 @@
 %---------------------------------------------------------
   \cventry
     {Sr. Data Scientist} % Job title
-    {Algorex Health Technoligies} % Organization
+    {Algorex Health Technologies} % Organization
     {Boston, MA} % Location
     {Mar. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Led a company-wide transition to AWS SageMaker on more
-          than a dozen client accounts, saving roughly \$40,000
-          annually in EC2 costs and reduced the onboarding time for
+          than a dozen client accounts, saving \$40,000
+          annually in infrastructure costs and reduced the onboarding time for
           new analysts from three days to 15 minutes. (Docker, Terraform, Jenkins)}
       \item {Principal developer of the internal python software
           development kit, which optimized the engineering environment
