--- a/src/resume/skills.tex
+++ b/src/resume/skills.tex
@@ -14,9 +14,9 @@
     {}
     {
       \begin{cvitems}
-        \item {Python, SSH, Git - 5 yoe; specializing in DS with pandas, numpy, matplotlib, plotly; modeling experience with xgboost, scikit-learn, and hyperopt}
+        \item {Python, SSH, Git - 5 yoe; specializing in DS with pandas, numpy, matplotlib; modeling experience with xgboost, scikit-learn, and hyperopt}
         \item {GNU/Unix, Bash, Make, SQL, Dask, Spark - 3 yoe}
-        \item {Every editor under the sun, especially: Vim, Neovim, Emacs, VSCode, JetBrains PyCharm}
+	\item {AWS Athena (Presto SQL), PostgreSQL, SQLite - 2 yoe}
       \end{cvitems}
     }
 
@@ -27,7 +27,7 @@
     {}
     {
       \begin{cvitems}
-        \item {Azure, AWS, Amazon Athena}
+        \item {Azure, AWS - 2 yoe}
         \item {Databricks, SageMaker, Docker, Terraform}
       \end{cvitems}
     }
