--- a/src/resume/summary.tex
+++ b/src/resume/summary.tex
@@ -11,6 +11,6 @@
 %-------------------------------------------------------------------------------
   Sr. Data Scientist with a track record of empowering data science teams to do
   more, run faster, and build robust software. I specialize in the gap between
-  buisiness analytics and deployment engineering to help both teams work better
+  business analytics and deployment engineering to help both teams work better
   together.
 \end{cvparagraph}
