--- a/src/resume/education.tex
+++ b/src/resume/education.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Master (M.A.) in Mathematics} % Degree
+    {Master (M.A.) Mathematics} % Degree
     {Miami University} % Institution
     {Oxford, OH} % Location
     {Sep. 2015 - May 2017} % Date(s)
@@ -23,21 +23,20 @@
     }
 
   \cventry
-    {B.A. in Mathematics} % Degree
+    {B.A. Mathematics} % Degree
     {Miami University} % Institution
     {Oxford, OH} % Location
     {Sep. 2013 - May 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-      \item {Presented {\it The (ab)surd Golden Ratio} at TEDX Miami
+      \item {Presented {\it The (ab)surd Golden Ratio} at TEDx Miami
           University on the false connections between art and the
-          fibonacci sequence: \url{https://youtu.be/0vVxL60YFJU} (over
-          325k views)}
+          Fibonacci sequence: \url{https://youtu.be/0vVxL60YFJU} (325k views)}
       \end{cvitems}
     }
 
   \cventry
-    {B.A. in Music} % Degree
+    {B.A. Music} % Degree
     {Miami University} % Institution
     {Oxford, OH} % Location
     {Sep. 2011 - May 2015} % Date(s)
