--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -66,8 +66,8 @@
       %     infrastructure. (Denodo, Excel, Python)
       % }
       \item {
-          Built market-mix models for three clients, solving for product
-          recommendations related to optimal pricing, personalization, customer
+          Built market-mix models for three clients, solving problems
+          related to optimal pricing, personalized product recommendations, customer
           churn, and lifetime value (CLTV) for over 1MM program members.  In
           these projects I had the opportunity to benchmark traditional methods
           like survival and mixed-effects modeling against newer, more
