more compact education section

--- a/src/resume/education.tex
+++ b/src/resume/education.tex
@@ -11,27 +11,19 @@
 
 %---------------------------------------------------------
   \cventry
-    {Master (M.A.) Mathematics} % Degree
+    {Master of Mathematics} % Degree
     {Miami University} % Institution
     {Oxford, OH} % Location
-    {Sep. 2015 - May 2017} % Date(s)
+    {Sep. 2011 - May 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Master's topic: {\it The Container Method for Triangle-induced Hypergraphs}}
         \item {2017 Journal award}
-      \end{cvitems}
-    }
-
-  \cventry
-    {B.A. Mathematics} % Degree
-    {Miami University} % Institution
-    {Oxford, OH} % Location
-    {Sep. 2013 - May 2015} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-      \item {Presented {\it The (ab)surd Golden Ratio} at TEDx Miami
-          University on the false connections between art and the
-          Fibonacci sequence: \url{https://youtu.be/0vVxL60YFJU} (325k views)}
+        \item {
+          Presented {\it The (ab)surd Golden Ratio} at TEDx Miami
+          University on the dubious connections between art and the
+          Fibonacci sequence: \url{https://youtu.be/0vVxL60YFJU} (325k views)
+        }
       \end{cvitems}
     }
 
