add vaccine timing model

--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -30,6 +30,12 @@
         data scientists, engineers, and project managers. (Presto SQL, jinja, bash,
         make, poetry-python)
       }
+      \item {
+        Lead modeling of COVID-19 vaccine adoption rates in vulnerable
+        populations around the greater Boston area to give targeted, actionable
+        outreach recommendations, resulting in 400+ additional vaccine
+        sign-ups.
+      }
       \end{cvitems}
     }
 
