move some algorex bits around

--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -18,23 +18,23 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {
-        Led a company-wide transition to AWS SageMaker on more than a dozen
+        Led modeling of COVID-19 vaccine adoption rates in vulnerable
+        populations around the greater Boston area to give targeted outreach
+        recommendations, resulting in 400+ additional vaccine sign-ups.
+        (Survival analysis in SQL+Python)
+      }
+      \item {
+        Transitioned the data science team to AWS SageMaker on more than a dozen
         client accounts, saving \$40,000 annually in infrastructure costs and
         reduced the onboarding time for new analysts from 3 days to 15 minutes.
         (Docker, Terraform, Jenkins)
       }
       \item {
-        Principal developer of the internal python + SQL software development
+        Principal developer of the internal Python + SQL software development
         kit, which optimized the engineering environment installation time from
         45 minutes to ~30 seconds and removed collaboration barriers between
-        data scientists, engineers, and project managers. (Presto SQL, jinja, bash,
-        make, poetry-python)
-      }
-      \item {
-        Lead modeling of COVID-19 vaccine adoption rates in vulnerable
-        populations around the greater Boston area to give targeted, actionable
-        outreach recommendations, resulting in 400+ additional vaccine
-        sign-ups.
+        data scientists, engineers, and project managers. (Presto SQL, Jinja, Bash,
+        Make, poetry-python)
       }
       \end{cvitems}
     }
