A little language cleanup

--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -20,8 +20,7 @@
       \item {
         Led modeling of COVID-19 vaccine adoption rates in vulnerable
         populations around the greater Boston area to give targeted outreach
-        recommendations, resulting in 400+ additional vaccine sign-ups.
-        (Survival analysis in SQL+Python)
+        recommendations. (Survival analysis in SQL+Python)
       }
       \item {
         Transitioned the data science team to AWS SageMaker on more than a dozen
@@ -72,8 +71,9 @@
       %     infrastructure. (Denodo, Excel, Python)
       % }
       \item {
-          Built market-mix models for three clients, solving problems
-          related to optimal pricing, personalized product recommendations, customer
+          Solved problems across three clients
+          related to optimal pricing, mixed-effects/hierarchical modeling,
+          personalized product recommendations, customer
           churn, and lifetime value (CLTV) for over 1MM program members.  In
           these projects I had the opportunity to benchmark traditional methods
           like survival and mixed-effects modeling against newer, more
