Start work on CVS section

--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -12,9 +12,29 @@
 %---------------------------------------------------------
   \cventry
     {Sr. Data Scientist} % Job title
+    {CVS Health - Analytics and Behavior Change} % Organization
+    {Wellesley, MA} % Location
+    {Aug. 2022 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {
+        Foo.
+      }
+      \item {
+        Bar.
+      }
+      \item {
+        Baz.
+      }
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Sr. Data Scientist} % Job title
     {Algorex Health Technologies} % Organization
     {Boston, MA} % Location
-    {Mar. 2021 - Present} % Date(s)
+    {Mar. 2021 - Aug. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {
@@ -26,14 +46,12 @@
         Transitioned the data science team to AWS SageMaker on more than a dozen
         client accounts, saving \$40,000 annually in infrastructure costs and
         reduced the onboarding time for new analysts from 3 days to 15 minutes.
-        (Docker, Terraform, Jenkins)
       }
       \item {
         Principal developer of the internal Python + SQL software development
         kit, which optimized the engineering environment installation time from
         45 minutes to ~30 seconds and removed collaboration barriers between
-        data scientists, engineers, and project managers. (Presto SQL, Jinja, Bash,
-        Make, poetry-python)
+        data scientists, engineers, and project managers.
       }
       \end{cvitems}
     }
@@ -50,14 +68,13 @@
           Wrote an optimization algorithm for strategic pricing of consumer
           healthcare products in 11 countries, modeling more than \$5Bn in
           revenue across 8 product categories per country.
-          (Python, Numpy, nlopt)
       }
       \item {
           Created ETL pipelines that prepared 1+ TB consumer healthcare
           product sales for a data warehouse.   I also designed over 50 custom
           views in the warehouse that reduced the average data scientist query
           time from 5 minutes to a few seconds and reduced the team's query
-          costs by 80 percent. (Spark SQL/pyspark, Kubernetes, Azure)
+          costs by 80 percent.
       }
       % \item {
       %     Optimized MY2021 MSRP recommendations for an international motorcycle
@@ -78,7 +95,7 @@
           these projects I had the opportunity to benchmark traditional methods
           like survival and mixed-effects modeling against newer, more
           sophisticated techniques, such as using an LSTM to predict
-          cross-product purchasing behavior. (python, scipy, R, lmer, numpy)
+          cross-product purchasing behavior.
       }
       \end{cvitems}
     }
