--- a/src/resume/skills.tex
+++ b/src/resume/skills.tex
@@ -14,9 +14,9 @@
     {}
     {
       \begin{cvitems}
-        \item {Python, SSH, Git - 5 yoe; specializing in DS with pandas, numpy, matplotlib; modeling experience with xgboost, scikit-learn, and hyperopt}
-        \item {GNU/Unix, Bash, Make, SQL, Dask, Spark - 3 yoe}
-	\item {AWS Athena (Presto SQL), PostgreSQL, SQLite - 2 yoe}
+        \item {Python}
+        \item {GNU/Unix: Git, Bash, Make, SSH}
+	\item {SQL: AWS Athena, Google BigQuery, PostgreSQL, SQLite}
       \end{cvitems}
     }
 
@@ -27,8 +27,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Azure, AWS - 2 yoe}
-        \item {Databricks, SageMaker, Docker, Terraform}
+        \item {Azure, AWS, Google Cloud Platform}
+        \item {Databricks, SageMaker, Docker, Terraform, Jenkins}
       \end{cvitems}
     }
 
