Update with CVS stuff

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -55,7 +55,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Robert}{Enzmann}
-\position{Data Science/Engineering{\enskip\cdotp\enskip}US Citizen}
+\position{ML Engineering{\enskip\cdotp\enskip}US Citizen}
 \address{Boston, MA}
 
 \homepage{robbmann.io}
