--- a/src/resume/experience.tex
+++ b/src/resume/experience.tex
@@ -12,19 +12,27 @@
 %---------------------------------------------------------
   \cventry
     {Sr. Data Scientist} % Job title
-    {CVS Health - Analytics and Behavior Change} % Organization
+    {CVS Health - Analytics \& Behavior Change} % Organization
     {Wellesley, MA} % Location
     {Aug. 2022 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {
-        Foo.
+        Implemented a BigQuery dataset with machine learning features supporting
+        over \$100 MM of revenue through targeted member-level marketing
+        materials and plan sponsor acquisition \& retention.
       }
       \item {
-        Bar.
+        Led technical design and implementation of a retrieval-assisted
+        generative chat web application that indexed hundreds of unstructured
+        documents (word, ppt, pdf) and assisted sales representatives
+        responsible for accurately presenting and selling Aetna's products to
+        its 14.5 million commercial members.
       }
       \item {
-        Baz.
+        Wrote and instructed an interactive ``Let's Git Going'' course for
+        internal use that brought 50+ developers to a professional level using
+        the Git version control system.
       }
       \end{cvitems}
     }
@@ -32,26 +40,25 @@
 %---------------------------------------------------------
   \cventry
     {Sr. Data Scientist} % Job title
-    {Algorex Health Technologies} % Organization
+    {N1 Health (formerly Algorex Health Technologies)} % Organization
     {Boston, MA} % Location
     {Mar. 2021 - Aug. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {
-        Led modeling of COVID-19 vaccine adoption rates in vulnerable
-        populations around the greater Boston area to give targeted outreach
-        recommendations. (Survival analysis in SQL+Python)
+        Principal developer of the internal Python software development kit,
+        reducing the environment setup time from 45 minutes to 30 seconds and
+        increasing net-new developer throughput by 50\%.
       }
       \item {
-        Transitioned the data science team to AWS SageMaker on more than a dozen
-        client accounts, saving \$40,000 annually in infrastructure costs and
-        reduced the onboarding time for new analysts from 3 days to 15 minutes.
+        Implemented automatic scaling and shutdown for data science
+        architecture, saving \$40,000 annually and reducing on-boarding time
+        from 3 days to 15 minutes.
       }
       \item {
-        Principal developer of the internal Python + SQL software development
-        kit, which optimized the engineering environment installation time from
-        45 minutes to ~30 seconds and removed collaboration barriers between
-        data scientists, engineers, and project managers.
+        Led modeling of COVID-19 vaccine adoption rates for 3,500 vulnerable
+        members around the greater Boston area, leading to targeted outreach
+        recommendations.
       }
       \end{cvitems}
     }
@@ -88,14 +95,8 @@
       %     infrastructure. (Denodo, Excel, Python)
       % }
       \item {
-          Solved problems across three clients
-          related to optimal pricing, mixed-effects/hierarchical modeling,
-          personalized product recommendations, customer
-          churn, and lifetime value (CLTV) for over 1MM program members.  In
-          these projects I had the opportunity to benchmark traditional methods
-          like survival and mixed-effects modeling against newer, more
-          sophisticated techniques, such as using an LSTM to predict
-          cross-product purchasing behavior.
+        Modeled customer churn and lifetime value for over 1 MM members for an
+        international medical cosmetics provider.
       }
       \end{cvitems}
     }
