--- a/src/resume/skills.tex
+++ b/src/resume/skills.tex
@@ -14,9 +14,13 @@
     {}
     {
       \begin{cvitems}
-        \item {Python}
+        \item {Python and all its messy history of packaging systems - pip, conda, poetry, pipenv, ...}
         \item {GNU/Unix: Git, Bash, Make, SSH}
-	\item {SQL: AWS Athena, Google BigQuery, PostgreSQL, SQLite}
+	\item {SQL: Google BigQuery, AWS Athena, PostgreSQL, SQLite}\
+        \item {
+          Enough HTML, CSS, JavaScript, Go, Markdown, and Org to get my personal
+          website up and running.
+        }
       \end{cvitems}
     }
 
@@ -29,6 +33,7 @@
       \begin{cvitems}
         \item {Azure, AWS, Google Cloud Platform}
         \item {Databricks, SageMaker, Docker, Terraform, Jenkins}
+        \item {Jekyll, GitHub pages, and GitHub actions for my personal website.}
       \end{cvitems}
     }
 
