--- a/src/resume/summary.tex
+++ b/src/resume/summary.tex
@@ -9,8 +9,9 @@
 \begin{cvparagraph}
 
 %-------------------------------------------------------------------------------
-  Sr. Data Scientist with a track record of empowering data science teams to do
-  more, run faster, and build robust software. I specialize in the gap between
-  business analytics and software engineering to help both teams work better
-  together.
+  Sr. Data Scientist with a track record of empowering data science teams to
+  build robust software and run faster as a result. I specialize in the gap
+  between business analytics and software engineering to help both teams deliver
+  more value together.
+
 \end{cvparagraph}
